--- a/src/mvc/view/BaseInsertarView.fxml
+++ b/src/mvc/view/BaseInsertarView.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
-            fx:controller="mvc.controller.ControllerInsertView"
+            fx:controller="mvc.controller.ControllerInsertarView"
             prefHeight="400.0" prefWidth="600.0">
 
 </AnchorPane>
