--- a/src/mvc/view/BaseActualizarView.fxml
+++ b/src/mvc/view/BaseActualizarView.fxml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="mvc.controller.ControllerActualizarView"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mvc.controller.ControllerActualizarView">
+   <children>
+      <Button layoutX="94.0" layoutY="63.0" mnemonicParsing="false" text="Button" />
+      <ChoiceBox layoutX="164.0" layoutY="63.0" prefWidth="150.0" />
+   </children>
 </AnchorPane>
